--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -5,5 +5,7 @@
 @import 'slider.scss';
 @import 'devices.scss';
 @import 'anim.scss';
+@import 'toolbar.scss';
+@import 'section.scss';
 
 body { margin: 0; padding: 0; }
