--- a/app/styles/logo-anim.scss
+++ b/app/styles/logo-anim.scss
@@ -1,252 +1,267 @@
+$def-size: 192;
+
+$def-icon-size: #{$def-size}px;
+$def-unit-size: #{$def-size / 48}px;
+
+$def-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12), 0 3px 1px -2px rgba(0,0,0,0.2);
+$def-easing: cubic-bezier(0.8, 0, 0.2, 1);
+
 @font-face {
-    font-family: geometry_soft_probold_n;
-    src: url(../fonts/Geometry_Soft_Pro-Bold_N-webfont.eot);
-    src: url(../fonts/Geometry_Soft_Pro-Bold_N-webfont.eot?#iefix) format("embedded-opentype"), url(../fonts/Geometry_Soft_Pro-Bold_N-webfont.woff) format("woff"), url(../fonts/Geometry_Soft_Pro-Bold_N-webfont.ttf) format("truetype"), url(../fonts/Geometry_Soft_Pro-Bold_N-webfont.svg#geometry_soft_probold_n) format("svg");
-    font-weight: 400;
-    font-style: normal
+	font-family: geometry_soft_probold_n;
+	src: url(../fonts/Geometry_Soft_Pro-Bold_N-webfont.eot);
+	src: url(../fonts/Geometry_Soft_Pro-Bold_N-webfont.eot?#iefix) format("embedded-opentype"), url(../fonts/Geometry_Soft_Pro-Bold_N-webfont.woff) format("woff"), url(../fonts/Geometry_Soft_Pro-Bold_N-webfont.ttf) format("truetype"), url(../fonts/Geometry_Soft_Pro-Bold_N-webfont.svg#geometry_soft_probold_n) format("svg");
+	font-weight: 400;
+	font-style: normal;
 }
+
+
 .cy-logo-wrapper {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    -webkit-box-pack: start;
-    -ms-flex-pack: start;
-    justify-content: flex-start
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	display: flex;
+	align-items: center;
+	justify-content: flex-start;
 }
-.cy-logo-material-border,
-.cy-logo .cy-logo-circle-1,
-.cy-logo .cy-logo-circle-2 {
-    border-top: 1px solid hsla(0, 0%, 100%, .25);
-    border-bottom: 1px solid rgba(38, 50, 56, .25)
+
+.cy-logo-material-border {
+	border-top: 1px solid rgba(255, 255, 255, 0.25);
+	border-bottom: 1px solid rgba(38, 50, 56, 0.25);
 }
+
 .cy-logo {
-    width: 192px;
-    height: 192px;
-    border: 0 solid #000;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center
+
+	width: $def-icon-size;
+	height: $def-icon-size;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+
+	.cy-logo-circle-1 {
+		width: calc(#{$def-icon-size} - #{$def-unit-size} * 4);
+		height: calc(#{$def-icon-size} - #{$def-unit-size} * 4);
+		animation-name: appear-scalling;
+		animation-delay: 0ms;
+		animation-timing-function: $def-easing;
+		animation-duration: 2s;
+		position: absolute;
+		border-radius: 50%;
+		box-shadow: $def-box-shadow;
+        @extend .cy-logo-material-border;
+	}
+	.cy-logo-circle-2 {
+		position: absolute;
+		border-radius: 50%;
+		box-shadow: $def-box-shadow;
+		width: calc(#{$def-icon-size} - #{$def-unit-size} * 16);
+		height: calc(#{$def-icon-size} - #{$def-unit-size} * 16);
+		animation-name: appear-scalling;
+		animation-delay: 0ms;
+		animation-timing-function: $def-easing;
+		animation-duration: 2.3s;
+        @extend .cy-logo-material-border;
+	}
+	.cy-logo-circle-3 {
+		position: absolute;
+		width: calc(#{$def-icon-size} - #{$def-unit-size} * 28);
+		height: calc(#{$def-icon-size} - #{$def-unit-size} * 28);
+		border-radius: 50%;
+		box-shadow: $def-box-shadow;
+		transform: rotate(30deg);
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		animation-name: appear-scalling-rotating;
+		animation-delay: 0ms;
+		animation-timing-function: $def-easing;
+		animation-duration: 2.6s;
+		overflow: hidden;
+        @extend .cy-logo-material-border;
+		
+	}
+
+    .cy-logo-circle-3-1 {
+        position: absolute;
+        width: calc(#{$def-icon-size} - #{$def-unit-size} * 36);
+        height: calc(#{$def-icon-size} - #{$def-unit-size} * 36);
+        padding-right: calc(#{$def-icon-size} * 0.05);
+        padding-top: calc(#{$def-icon-size} * 0.013);
+        border-radius: 50%;
+        box-shadow: inset 0 2px 2px 0 rgba(0, 0, 0, 0.14), inset 0 1px 5px 0 rgba(0, 0, 0, 0.12), inset 0 3px 1px -2px rgba(0, 0, 0, 0.2);
+
+        transform: rotate(30deg);
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		animation-name: appear-scalling-rotating;
+		animation-delay: 0ms;
+		animation-timing-function: $def-easing;
+		animation-duration: 2.6s;
+    }
+
+    .cy-logo-c-letter {
+        position: absolute;
+        font-family: geometry_soft_probold_n;
+        font-size: calc(#{$def-icon-size} * 0.645);
+        padding-right: calc(#{$def-icon-size} * 0.05);
+        padding-top: calc(#{$def-icon-size} * 0.013);
+        color: #fff;
+        text-shadow: 0 2px 2px rgba(0, 0, 0, 0.07), 0 1px 5px rgba(0, 0, 0, 0.06), 0 3px 1px rgba(0, 0, 0, 0.1);
+
+        transform: rotate(30deg);
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		animation-name: appear-scalling-rotating;
+		animation-delay: 0ms;
+		animation-timing-function: $def-easing;
+		animation-duration: 2.6s;
+    }
+    
+	.cy-logo-circle-4 {
+		position: absolute;
+		width: 176px;
+		height: 176px;
+		border-radius: 50%;
+		background: linear-gradient(135deg, hsla(0, 0%, 100%, 0.1), hsla(0, 0%, 100%, 0));
+		animation-name: appear-scalling;
+		animation-delay: 0ms;
+		animation-timing-function: $def-easing;
+		animation-duration: 2s;
+	}
+	.cy-logo-y-letter {
+        position: absolute;
+		font-size: calc(#{$def-icon-size} * 0.645);
+        padding-left: calc(#{$def-icon-size} * 0.4);
+        padding-top: calc(#{$def-icon-size} * 0.33);
+        font-family: geometry_soft_probold_n;
+        color: #fff;
+		text-shadow: 0 2px 2px rgba(0, 0, 0, 0.07), 0 1px 5px rgba(0, 0, 0, 0.06), 0 3px 1px rgba(0, 0, 0, 0.1);
+		
+        animation-name: appear-move-up;
+		animation-delay: 0ms;
+		animation-timing-function: $def-easing;
+		animation-duration: 3s;
+	}
+
+	.cy-logo-tech-letter {
+		position: absolute;
+		font-size: calc(#{$def-icon-size} * 0.645);
+        padding-left: calc(#{$def-icon-size} * 2.38);
+        padding-top: calc(#{$def-icon-size} * 0.33);
+        font-family: geometry_soft_probold_n;
+        color: #fff;
+		text-shadow: 0 2px 2px rgba(0, 0, 0, 0.07), 0 1px 5px rgba(0, 0, 0, 0.06), 0 3px 1px rgba(0, 0, 0, 0.1);
+
+        animation-name: appear-move-up;
+		animation-delay: 0ms;
+		animation-timing-function: $def-easing;
+		animation-duration: 3.9s;
+	}
+	&.cy-logo-no-tech .cy-logo-tech-letter {
+		display: none;
+	}
 }
-.cy-logo .cy-logo-circle-1 {
-    width: 176px;
-    height: 176px;
-    -webkit-animation-name: appear-scalling;
-    animation-name: appear-scalling;
-    -webkit-animation-delay: 0ms;
-    animation-delay: 0ms;
-    -webkit-animation-timing-function: cubic-bezier(.8, 0, .2, 1);
-    animation-timing-function: cubic-bezier(.8, 0, .2, 1);
-    -webkit-animation-duration: 2s;
-    animation-duration: 2s
-}
-.cy-logo .cy-logo-circle-1,
-.cy-logo .cy-logo-circle-2 {
-    position: absolute;
-    border-radius: 50%;
-    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .14), 0 1px 5px 0 rgba(0, 0, 0, .12), 0 3px 1px -2px rgba(0, 0, 0, .2)
-}
-.cy-logo .cy-logo-circle-2 {
-    width: 128px;
-    height: 128px;
-    -webkit-animation-name: appear-scalling;
-    animation-name: appear-scalling;
-    -webkit-animation-delay: 0ms;
-    animation-delay: 0ms;
-    -webkit-animation-timing-function: cubic-bezier(.8, 0, .2, 1);
-    animation-timing-function: cubic-bezier(.8, 0, .2, 1);
-    -webkit-animation-duration: 2.3s;
-    animation-duration: 2.3s
-}
-.cy-logo .cy-logo-circle-3 {
-    position: absolute;
-    width: 80px;
-    height: 80px;
-    border-radius: 50%;
-    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .14), 0 1px 5px 0 rgba(0, 0, 0, .12), 0 3px 1px -2px rgba(0, 0, 0, .2);
-    -webkit-transform: rotate(30deg);
-    transform: rotate(30deg);
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    -webkit-animation-name: appear-scalling-rotating;
-    animation-name: appear-scalling-rotating;
-    -webkit-animation-delay: 0ms;
-    animation-delay: 0ms;
-    -webkit-animation-timing-function: cubic-bezier(.8, 0, .2, 1);
-    animation-timing-function: cubic-bezier(.8, 0, .2, 1);
-    -webkit-animation-duration: 2.6s;
-    animation-duration: 2.6s;
-    overflow: hidden
-}
-.cy-logo .cy-logo-circle-3 .cy-logo-circle-3-1 {
-    position: absolute;
-    width: 48px;
-    height: 48px;
-    border-radius: 50%;
-    box-shadow: inset 0 2px 2px 0 rgba(0, 0, 0, .14), inset 0 1px 5px 0 rgba(0, 0, 0, .12), inset 0 3px 1px -2px rgba(0, 0, 0, .2)
-}
-.cy-logo .cy-logo-circle-3 .cy-logo-c-letter {
-    position: absolute;
-    font-family: geometry_soft_probold_n;
-    font-size: 124.4px;
-    line-height: 80px;
-    padding-right: 9.984px;
-    padding-top: 2.5344px;
-    color: #fff;
-    text-shadow: 0 2px 2px rgba(0, 0, 0, .07), 0 1px 5px rgba(0, 0, 0, .06), 0 3px 1px rgba(0, 0, 0, .1)
-}
-.cy-logo .cy-logo-circle-4 {
-    position: absolute;
-    width: 176px;
-    height: 176px;
-    border-radius: 50%;
-    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .14), 0 1px 5px 0 rgba(0, 0, 0, .12), 0 3px 1px -2px rgba(0, 0, 0, .2);
-    background: linear-gradient(135deg, hsla(0, 0%, 100%, .1), hsla(0, 0%, 100%, 0));
-    -webkit-animation-name: appear-scalling;
-    animation-name: appear-scalling;
-    -webkit-animation-delay: 0ms;
-    animation-delay: 0ms;
-    -webkit-animation-timing-function: cubic-bezier(.8, 0, .2, 1);
-    animation-timing-function: cubic-bezier(.8, 0, .2, 1);
-    -webkit-animation-duration: 2s;
-    animation-duration: 2s
-}
-.cy-logo .cy-logo-y-letter {
-    padding-left: 76.8px;
-    padding-top: 65.28px;
-    -webkit-animation-name: appear-move-up;
-    animation-name: appear-move-up;
-    -webkit-animation-delay: 0ms;
-    animation-delay: 0ms;
-    -webkit-animation-timing-function: cubic-bezier(.8, 0, .2, 1);
-    animation-timing-function: cubic-bezier(.8, 0, .2, 1);
-    -webkit-animation-duration: 3s;
-    animation-duration: 3s
-}
-.cy-logo .cy-logo-tech-letter,
-.cy-logo .cy-logo-y-letter {
-    position: absolute;
-    font-family: geometry_soft_probold_n;
-    font-size: 124.4px;
-    line-height: 80px;
-    color: #fff;
-    text-shadow: 0 2px 2px rgba(0, 0, 0, .07), 0 1px 5px rgba(0, 0, 0, .06), 0 3px 1px rgba(0, 0, 0, .1)
-}
-.cy-logo .cy-logo-tech-letter {
-    height: 80px;
-    padding-left: 460.8px;
-    padding-top: 32.64px;
-    -webkit-animation-name: appear-move-up;
-    animation-name: appear-move-up;
-    -webkit-animation-delay: 0ms;
-    animation-delay: 0ms;
-    -webkit-animation-timing-function: cubic-bezier(.8, 0, .2, 1);
-    animation-timing-function: cubic-bezier(.8, 0, .2, 1);
-    -webkit-animation-duration: 3.3s;
-    animation-duration: 3.3s
-}
-.cy-logo.cy-logo-no-tech .cy-logo-tech-letter {
-    display: none
-}
+
 @-webkit-keyframes appear-scalling {
-    0% {
-        opacity: 0;
-        -webkit-transform: scale(0);
-        transform: scale(0)
-    }
-    to {
-        opacity: 1;
-        -webkit-transform: scale(1);
-        transform: scale(1)
-    }
+	0% {
+		opacity: 0;
+		-webkit-transform: scale(0);
+		transform: scale(0);
+	}
+
+	to {
+		opacity: 1;
+		-webkit-transform: scale(1);
+		transform: scale(1);
+	}
 }
+
+
 @keyframes appear-scalling {
-    0% {
-        opacity: 0;
-        -webkit-transform: scale(0);
-        transform: scale(0)
-    }
-    to {
-        opacity: 1;
-        -webkit-transform: scale(1);
-        transform: scale(1)
-    }
+	0% {
+		opacity: 0;
+		-webkit-transform: scale(0);
+		transform: scale(0);
+	}
+
+	to {
+		opacity: 1;
+		-webkit-transform: scale(1);
+		transform: scale(1);
+	}
 }
+
+
 @-webkit-keyframes appear-scalling-rotating {
-    0% {
-        opacity: 0;
-        -webkit-transform: scale(0) rotate(-1turn);
-        transform: scale(0) rotate(-1turn)
-    }
-    to {
-        opacity: 1;
-        -webkit-transform: scale(1) rotate(30deg);
-        transform: scale(1) rotate(30deg)
-    }
+	0% {
+		opacity: 0;
+		-webkit-transform: scale(0) rotate(-1turn);
+		transform: scale(0) rotate(-1turn);
+	}
+
+	to {
+		opacity: 1;
+		-webkit-transform: scale(1) rotate(30deg);
+		transform: scale(1) rotate(30deg);
+	}
 }
+
+
 @keyframes appear-scalling-rotating {
-    0% {
-        opacity: 0;
-        -webkit-transform: scale(0) rotate(-1turn);
-        transform: scale(0) rotate(-1turn)
-    }
-    to {
-        opacity: 1;
-        -webkit-transform: scale(1) rotate(30deg);
-        transform: scale(1) rotate(30deg)
-    }
+	0% {
+		opacity: 0;
+		-webkit-transform: scale(0) rotate(-1turn);
+		transform: scale(0) rotate(-1turn);
+	}
+
+	to {
+		opacity: 1;
+		-webkit-transform: scale(1) rotate(30deg);
+		transform: scale(1) rotate(30deg);
+	}
 }
+
+
 @-webkit-keyframes appear-move-up {
-    0% {
-        opacity: 0;
-        -webkit-transform: translateY(20px);
-        transform: translateY(20px)
-    }
-    50% {
-        opacity: 0;
-        -webkit-transform: translateY(20px);
-        transform: translateY(20px)
-    }
-    to {
-        opacity: 1;
-        -webkit-transform: translateY(0);
-        transform: translateY(0)
-    }
+	0% {
+		opacity: 0;
+		-webkit-transform: translateY(20px);
+		transform: translateY(20px);
+	}
+
+	50% {
+		opacity: 0;
+		-webkit-transform: translateY(20px);
+		transform: translateY(20px);
+	}
+
+	to {
+		opacity: 1;
+		-webkit-transform: translateY(0);
+		transform: translateY(0);
+	}
 }
+
+
 @keyframes appear-move-up {
-    0% {
-        opacity: 0;
-        -webkit-transform: translateY(20px);
-        transform: translateY(20px)
-    }
-    50% {
-        opacity: 0;
-        -webkit-transform: translateY(20px);
-        transform: translateY(20px)
-    }
-    to {
-        opacity: 1;
-        -webkit-transform: translateY(0);
-        transform: translateY(0)
-    }
+	0% {
+		opacity: 0;
+		-webkit-transform: translateY(20px);
+		transform: translateY(20px);
+	}
+
+	50% {
+		opacity: 0;
+		-webkit-transform: translateY(20px);
+		transform: translateY(20px);
+	}
+
+	to {
+		opacity: 1;
+		-webkit-transform: translateY(0);
+		transform: translateY(0);
+	}
 }
