--- a/app/styles/devices.scss
+++ b/app/styles/devices.scss
@@ -1,13 +1,27 @@
 $def-imac-size: 360;
-
 $def-imac-device-size: #{$def-imac-size}px;
-$def-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12), 0 3px 1px -2px rgba(0,0,0,0.2);
+$def-tablet-size: $def-imac-size * .7;
+$def-tablet-device-size: #{$def-tablet-size}px;
+
+$def-box-shadow: 0 4px 5px 0 rgba(0,0,0,0.14), 0 1px 10px 0 rgba(0,0,0,0.12), 0 2px 4px -1px rgba(0,0,0,0.3);
 $def-easing: cubic-bezier(0.8, 0, 0.2, 1);
 
 .cy-device-imac {
     position: relative;
     width: $def-imac-device-size;
     height: $def-imac-device-size;
+
+    .cy-device-imac-button {
+        position: absolute;
+        border-radius: 50%;
+        background-color: rgba(0, 0, 0, .2);
+        width: #{$def-imac-size * .05}px;
+        height: #{$def-imac-size * .05}px;
+        bottom: 24.4%;
+        left: 50%;
+        transform: translateX(-50%);
+        z-index: 11;
+    }
 
     .cy-device-imac-screen {
         position: absolute;
@@ -17,7 +31,7 @@ $def-easing: cubic-bezier(0.8, 0, 0.2, 1);
         right: 0;
         border-radius: #{$def-imac-size * .03}px;
         box-shadow: $def-box-shadow;
-        z-index: 2;
+        z-index: 10;
         overflow: hidden;
 
         .cy-device-imac-innerscreen {
@@ -26,8 +40,18 @@ $def-easing: cubic-bezier(0.8, 0, 0.2, 1);
             bottom: 15%;
             left: 0;
             right: 0;
-            box-shadow: $def-box-shadow;
             z-index: 2;
+
+            .cy-device-imac-camera {
+                position: absolute;
+                border-radius: 50%;
+                background-color: rgba(255, 255, 255, .1);
+                width: #{$def-imac-size * .02}px;
+                height: #{$def-imac-size * .02}px;
+                top: 4%;
+                left: 50%;
+                transform: translateX(-50%);
+            }
 
             .cy-device-imac-innerinnerscreen {
                 position: absolute;
@@ -37,29 +61,115 @@ $def-easing: cubic-bezier(0.8, 0, 0.2, 1);
                 right: 5%;
                 box-shadow: $def-box-shadow;
                 z-index: 2;
-                display: none;
+                overflow: hidden;
+                display: flex;
+                align-items: center;
+                justify-content: center;
             }
         }
     }
 
-    .cy-device-imac-support-1 {
+    .cy-device-imac-extra-1 {
+        position: absolute;
+        top: 12%;
+        bottom: 12%;
+        left: 40%;
+        right: 45%;
+        box-shadow: $def-box-shadow;
+        z-index: 1;
+        transform: skewX(10deg)
+    }
+
+    .cy-device-imac-extra-2 {
+        position: absolute;
+        top: 12%;
+        bottom: 12%;
+        left: 45%;
+        right: 40%;
+        box-shadow: $def-box-shadow;
+        z-index: 1;
+        transform: skewX(-10deg)
+    }
+
+    .cy-device-imac-extra-3 {
         position: absolute;
         top: 12%;
         bottom: 12%;
         left: 40%;
         right: 40%;
+        z-index: 2;
+    }
+}
+
+
+.cy-device-tablet {
+    position: relative;
+    width: $def-tablet-device-size;
+    height: $def-tablet-device-size;
+
+    .cy-device-tablet-screen {
+        position: absolute;
+        top: 12%;
+        bottom: 22%;
+        left: 0;
+        right: 0;
+        border-radius: #{$def-tablet-size * .03}px;
         box-shadow: $def-box-shadow;
-        z-index: 1;
+        z-index: 10;
+        overflow: hidden;
+
+        .cy-device-tablet-innerscreen {
+            position: absolute;
+            top: 0;
+            bottom: 15%;
+            left: 0;
+            right: 0;
+            z-index: 2;
+
+            .cy-device-tablet-innerinnerscreen {
+                position: absolute;
+                top: 10%;
+                bottom: 10%;
+                left: 5%;
+                right: 5%;
+                box-shadow: $def-box-shadow;
+                z-index: 2;
+                overflow: hidden;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+            }
+        }
     }
 
-    .cy-device-imac-support-2 {
+    .cy-device-tablet-extra-1 {
         position: absolute;
-        top: 85%;
+        top: 12%;
         bottom: 12%;
-        left: 35%;
-        right: 35%;
+        left: 40%;
+        right: 45%;
         box-shadow: $def-box-shadow;
-        border-radius: #{$def-imac-size * .01}px;
+        z-index: 1;
+        transform: skewX(10deg)
+    }
+
+    .cy-device-tablet-extra-2 {
+        position: absolute;
+        top: 12%;
+        bottom: 12%;
+        left: 45%;
+        right: 40%;
+        box-shadow: $def-box-shadow;
+        z-index: 1;
+        transform: skewX(-10deg)
+    }
+
+    .cy-device-tablet-extra-3 {
+        position: absolute;
+        top: 12%;
+        bottom: 12%;
+        left: 40%;
+        right: 40%;
         z-index: 2;
     }
 }
