--- a/app/styles/section.scss
+++ b/app/styles/section.scss
@@ -1,3 +1,4 @@
+@import 'global.scss';
 
 $def-height: calc(100vh);
 $def-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12), 0 3px 1px -2px rgba(0,0,0,0.2);
@@ -34,6 +35,26 @@ $def-easing: cubic-bezier(0.8, 0, 0.2, 1);
     }
 
     .cy-section-title {
-        
+        @include responsive (font-size, 24px, 28px, 32px);
+        font-weight: 900;
+        text-transform: uppercase;
+        margin: 5px 20px;
+    }
+
+    .cy-section-text {
+        @include responsive (font-size, 14px, 15px, 16px);
+        font-weight: 500;
+        text-transform: uppercase;
+        margin: 5px 20px;
+    }
+
+    .cy-section-extra-text {
+        height: 0;
+        overflow: hidden;
+        transition: all 500ms $def-easing;
+    }
+
+    .cy-btn-toggle-text {
+        margin: 5px 20px;
     }
 }
