--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -19,15 +19,18 @@ body { margin: 0; padding: 0; }
 
     .cy-device-imac {
         margin-left: -10%;
+        z-index: 0;
     }
 
     .cy-device-tablet {
         top: 30%;
         left: 60%;
+        z-index: 2;
     }
 
     .cy-device-phone {
         top: 31%;
         left: -30%;
+        z-index: 3;
     }
 }
