--- a/app/styles/section.scss
+++ b/app/styles/section.scss
@@ -1,6 +1,6 @@
 @import 'global.scss';
 
-$def-height: calc(100vh);
+$def-height: calc(100vh - 80px);
 $def-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12), 0 3px 1px -2px rgba(0,0,0,0.2);
 $def-easing: cubic-bezier(0.8, 0, 0.2, 1);
 
@@ -34,6 +34,11 @@ $def-easing: cubic-bezier(0.8, 0, 0.2, 1);
         }
     }
 
+    .cy-gravity-bottom {
+        align-items: flex-end;
+        justify-content: flex-end;
+    }
+
     .cy-section-title {
         @include responsive (font-size, 24px, 28px, 32px);
         font-weight: 900;
@@ -57,4 +62,13 @@ $def-easing: cubic-bezier(0.8, 0, 0.2, 1);
     .cy-btn-toggle-text {
         margin: 5px 20px;
     }
+}
+
+.cy-footer {
+    padding: 20px 0;
+    display: flex;
+    justify-content: space-around;
+
+    font-size: 16px;
+    font-weight: 300;
 }
