--- a/app/styles/slider.scss
+++ b/app/styles/slider.scss
@@ -8,6 +8,8 @@ $def-easing: cubic-bezier(0.8, 0, 0.2, 1);
     height: $def-height;
     transition: all 2s $def-easing;
     background-color: #1A237E;
+    background: url(../images/header-bg.png) center / cover;
+    z-index: 2000;
 
     .cy-slider-circle-wrapper {
         position: absolute;
@@ -21,7 +23,7 @@ $def-easing: cubic-bezier(0.8, 0, 0.2, 1);
     .cy-slider-circle {
         position: absolute;
         border-radius: 50%;
-        background: rgba(255, 255, 255, .03);
+        background: rgba(255, 255, 255, .1);
         z-index: 0;
         transition: all 2s linear;
 
@@ -97,11 +99,20 @@ $def-easing: cubic-bezier(0.8, 0, 0.2, 1);
             }
         }
 
+        .cy-bottom-gravity {
+            align-items: flex-end;
+        }
+
         .cy-slide-strong-text {
-            font-size: 32px;
+            font-size: 24px;
             font-weight: 900;
-            margin: 0 80px !important;
+            margin: 5px 80px !important;
             text-transform: uppercase;
+        }
+
+        .cy-slide-btn {
+            margin: 5px 80px;
+            z-index: 2010;
         }
     }
 
@@ -126,7 +137,7 @@ $def-easing: cubic-bezier(0.8, 0, 0.2, 1);
         transform: scale(0.0);
     }
     to {
-        background: rgba(255, 255, 255, .03);
+        background: rgba(255, 255, 255, .1);
         transform: scale(1.0);
     }
 }
