--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -7,6 +7,8 @@
 @import 'anim.scss';
 @import 'toolbar.scss';
 @import 'section.scss';
+@import 'cool-grid.scss';
+@import 'izotx-loading.scss';
 
 body { margin: 0; padding: 0; }
 
