--- a/app/styles/section.scss
+++ b/app/styles/section.scss
@@ -5,7 +5,7 @@ $def-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12), 0 3
 $def-easing: cubic-bezier(0.8, 0, 0.2, 1);
 
 .cy-section {
-    height: $def-height;
+    min-height: $def-height;
 
     .cy-section-group {
         display: flex;
