--- a/app/styles/cool-grid.scss
+++ b/app/styles/cool-grid.scss
@@ -31,7 +31,7 @@ $def-easing: cubic-bezier(0.8, 0, 0.2, 1);
     .cy-cool-grid-tile {
         position: relative;
         @include responsive(
-            width, calc(100% - 5px), calc(33.33333% - 10px), calc(25% - 20px)
+            width, calc(100% - 20px), calc(50% - 10px), calc(25% - 20px)
         );        
         height: 300px;
         overflow: hidden;
@@ -47,7 +47,7 @@ $def-easing: cubic-bezier(0.8, 0, 0.2, 1);
 
         .cy-cool-grid-tile-overlay {
             position: absolute;
-            top: 0; bottom: 0;
+            bottom: 0;
             left: 0; right: 0;
             display: flex;
             align-items: center;
@@ -56,7 +56,34 @@ $def-easing: cubic-bezier(0.8, 0, 0.2, 1);
             padding: 20px;
             transition: all 150ms linear;
             transform: scale(1.2);
-            opacity: 0;
+
+            @include responsive(
+                top,
+                auto,
+                auto,
+                0
+            );
+
+            @include responsive(
+                background-color,
+                rgba(0, 0, 0, .8),
+                rgba(0, 0, 0, .8),
+                transparent
+            );
+
+            @include responsive(
+                opacity,
+                1,
+                1,
+                0.0
+            );
+
+            @include responsive(
+                transform,
+                scale(1),
+                scale(1),
+                scale(1.2)
+            );
 
             &:hover {
                 background-color: rgba(0, 0, 0, .8);
@@ -87,7 +114,7 @@ $def-easing: cubic-bezier(0.8, 0, 0.2, 1);
 
     .cy-cool-grid-tile-2 {
         @include responsive(
-            width, calc(100% - 5px), calc(66.66666% - 10px), calc(50% - 20px)
+            width, calc(100% - 20px), calc(50% - 10px), calc(50% - 20px)
         );        
     }
 
