--- a/app/styles/global.scss
+++ b/app/styles/global.scss
@@ -1,10 +1,10 @@
 // Media Query Ranges
-$small-screen-up: 480px !default;
-$medium-screen-up: 840px !default;
-$large-screen-up: 1280px !default;
-$small-screen: 480px !default;
-$medium-screen: 840px !default;
-$large-screen: 1280px !default;
+$small-screen-up: 601px !default;
+$medium-screen-up: 993px !default;
+$large-screen-up: 1201px !default;
+$small-screen: 600px !default;
+$medium-screen: 992px !default;
+$large-screen: 1200px !default;
 
 @mixin responsive($attr, $phone, $tablet, $desktop) {
     @media screen and (max-width: $small-screen) {
@@ -21,5 +21,12 @@ $large-screen: 1280px !default;
 .cy-stretch-wrapper {
     display: flex;
     align-items: stretch;
-    flex-direction: row;
+    justify-content: center;
+
+    @include responsive(
+        flex-direction, 
+        column, 
+        row, 
+        row
+    )
 }
