--- a/app/styles/toolbar.scss
+++ b/app/styles/toolbar.scss
@@ -11,12 +11,16 @@ $def-easing: cubic-bezier(0.8, 0, 0.2, 1);
     height: $def-toolbar-collapsed-height;
     position: fixed;
     top: 0; left: 0; right: 0;
-    z-index: 1000;
+    z-index: 3000;
 
     display: flex;
     flex-direction: row;
     align-items: center;
     overflow: hidden;
+
+    .button-collapse {
+        margin-left: 20px;
+    }
 
     .cy-toolbar-active-circle {
         position: absolute;
@@ -29,7 +33,9 @@ $def-easing: cubic-bezier(0.8, 0, 0.2, 1);
         display: flex;
         align-items: center;
         justify-content: space-around;
-        width: 100%;
+        @include responsive(
+            width, calc(100% - 80px), calc(100% - 80px), 100%
+        );
         transition: all 300ms $def-easing;
         z-index: 1;
 
@@ -54,8 +60,15 @@ $def-easing: cubic-bezier(0.8, 0, 0.2, 1);
     }
 
     &.cy-toolbar-expanded {
-        height: $def-toolbar-expanded-height;
-        position: relative;
+        @include responsive(
+            height, 
+            $def-toolbar-collapsed-height,
+            $def-toolbar-collapsed-height, 
+            $def-toolbar-expanded-height
+        );
+        @include responsive(
+            position, fixed, fixed, relative
+        ); 
     }
 
 }
