--- a/app/styles/global.scss
+++ b/app/styles/global.scss
@@ -17,7 +17,7 @@ $large-screen: 1200px !default;
         #{$attr}: $desktop;
     }
 }
-
+ 
 .cy-stretch-wrapper {
     display: flex;
     align-items: stretch;
@@ -29,4 +29,16 @@ $large-screen: 1200px !default;
         row, 
         row
     )
+}
+
+.cy-foreground {
+    position: fixed;
+    top: 0; bottom: 0;
+    left: 0; right: 0;
+    background-color: #FFF;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    z-index: 5000;
 }
