--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -66,7 +66,7 @@ body {
         bottom: 0;
         right: 0;
         @include responsive(
-            width, 240px, 400px, 600px
+            width, 0, 400px, 600px
         );
     }
 }
