--- a/app/styles/toolbar.scss
+++ b/app/styles/toolbar.scss
@@ -49,7 +49,9 @@ $def-easing: cubic-bezier(0.8, 0, 0.2, 1);
             flex-direction: column;
 
             i {
-                font-size: 24px;
+                @include responsive(
+                    font-size, 36px, 32px, 24px
+                );
             }
 
             span {
